docs-website/versioned_docs/version-2.18/pipeline-components/connectors.mdx
---
title: "Connectors"
id: connectors
slug: "/connectors"
description: "These are Haystack integrations that connect your pipelines to services by external providers."
---

# Connectors

These are Haystack integrations that connect your pipelines to services by external providers.

| Component                                                | Description                                                                                               |
| :------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------- |
| [GitHubFileEditor](connectors/githubfileeditor.mdx)                 | Enables editing files in GitHub repositories through the GitHub API.                                      |
| [GitHubIssueCommenter](connectors/githubissuecommenter.mdx)         | Enables posting comments to GitHub issues using the GitHub API.                                           |
| [GitHubIssueViewer](connectors/githubissueviewer.mdx)               | Enables fetching and parsing GitHub issues into Haystack documents.                                       |
| [GitHubPRCreator](connectors/githubprcreator.mdx)                   | Enables creating pull requests from a fork back to the original repository through the GitHub API.        |
| [GitHubRepoForker](connectors/githubrepoforker.mdx)                 | Enables forking a GitHub repository from an issue URL through the GitHub API.                             |
| [GitHubRepoViewer](connectors/githubrepoviewer.mdx)                 | Enables navigating and fetching content from GitHub repositories through the GitHub API.                  |
| [JinaReaderConnector](connectors/jinareaderconnector.mdx)           | Use Jina AI’s Reader API with Haystack.                                                                   |
| [LangfuseConnector](connectors/langfuseconnector.mdx)             | Enables tracing in Haystack pipelines using Langfuse.                                                     |
| [OpenAPIConnector](connectors/openapiconnector.mdx)                 | Acts as an interface between the Haystack ecosystem and OpenAPI services, using explicit input arguments. |
| [OpenAPIServiceConnector](connectors/openapiserviceconnector.mdx) | Acts as an interface between the Haystack ecosystem and OpenAPI services.                                 |
| [WeaveConnector](connectors/weaveconnector.mdx)                     | Connects you to Weights & Biases Weave framework for tracing and monitoring your pipeline components.     |
